--- a/privacy.html
+++ b/privacy.html
@@ -12,7 +12,92 @@
     </header>
 
     <main>
-        <p>ここにプライバシーポリシーの内容を記載してください。</p>
+        <p>
+このプライバシーポリシー（以下、「本ポリシー」）は、NeonBot運営チーム（以下、「本チーム」）が提供するDiscordボット「NeonBot」（以下、「本サービス」）における、ユーザーの情報の取扱いについて定めるものです。
+ユーザーは、本サービスを利用することで、本ポリシーに同意したものとみなします。
+
+1. 収集する情報と利用目的
+
+本チームは、本サービスの提供に必要な範囲で、以下の情報を収集・利用します。
+
+1. 本サービスの提供・運営のため
+
+
+2. お問い合わせ対応のため（不具合報告・サポートなど）
+
+
+3. 不正利用や規約違反の防止のため（スパム対策、悪意ある利用の検出など）
+
+
+4. 本サービスの改善・品質向上のため
+
+
+
+本サービスでは、個人情報（氏名・住所・メールアドレスなど）を直接収集することはありませんが、Discord APIを通じて、ユーザーのID、サーバー情報、メッセージ内容（必要に応じて）を取得する場合があります。
+
+2. 利用目的の変更
+
+本チームは、以下の場合に限り、情報の利用目的を変更することがあります。
+
+1. 変更前の目的と関連性がある場合
+
+
+2. 変更が合理的であり、ユーザーにとって不利益にならない場合
+
+
+
+利用目的を変更する際は、適切な方法でユーザーに通知します。
+
+3. 第三者提供について
+
+本チームは、ユーザーの情報を第三者に提供することはありません。ただし、以下の場合は例外とします。
+
+1. 法律に基づき開示が求められた場合
+
+
+2. ユーザーの同意がある場合
+
+
+3. サービスの運営に必要な範囲で、業務委託先に提供する場合（サーバーホスティング、データ分析など）
+
+
+
+4. 情報の開示・削除
+
+ユーザーが自身の情報の開示・訂正・削除を希望する場合、本チームは適切な方法で対応します。ただし、以下の場合は情報の開示を拒否することがあります。
+
+1. 他のユーザーのプライバシーを侵害する可能性がある場合
+
+
+2. 法律に違反する場合
+
+
+3. 本チームのサービス運営に重大な支障をきたす場合
+
+
+
+5. 情報の保存期間
+
+本チームは、収集した情報を必要な期間のみ保持し、不要になった情報は適切に削除します。
+
+6. 本ポリシーの変更
+
+本チームは、以下の場合に本ポリシーを変更することができます。
+
+1. ユーザーの一般的な利益に適合すると判断した場合
+
+
+2. サービス内容の変更に伴い、合理的な範囲で改訂が必要な場合
+
+
+
+変更がある場合、本チームは適切な方法でユーザーに通知します。
+
+7. お問い合わせ
+
+本ポリシーに関するお問い合わせは、NeonBot運営チームまでご連絡ください。
+
+</p>
     </main>
 
     <footer>
