--- a/terms.html
+++ b/terms.html
@@ -12,7 +12,123 @@
     </header>
 
     <main>
-        <p>ここに利用規約の内容を記載してください。</p>
+        <p>
+この利用規約（以下、「本規約」）は、NeonBot運営チーム（以下、「本チーム」）が提供するDiscordボット「NeonBot」（以下、「本サービス」）の利用条件を定めるものです。
+本サービスを利用するすべての方（以下、「ユーザー」）は、本規約に同意の上、ご利用ください。
+
+1. 適用範囲
+
+本規約は、本サービスを利用するすべてのユーザーに適用されます。
+
+本チームは、必要に応じて本規約とは別に追加のルール（以下、「個別規定」）を定めることがあります。個別規定は本規約の一部を構成するものとします。
+
+本規約と個別規定が矛盾する場合、特別な定めがない限り個別規定が優先されます。
+
+
+2. サービスの利用と制限
+
+本サービスは、サーバーの所有者または管理者が導入することで利用可能になります。
+
+本チームは、以下のいずれかに該当する場合、ユーザーに事前通知なく本サービスの利用を制限・停止することができます。
+
+1. 本規約または個別規定に違反した場合
+
+
+2. Discordの利用規約やガイドラインに違反した場合
+
+
+3. 本サービスの運営を妨害する行為を行った場合
+
+
+4. その他、本チームが不適切と判断した場合
+
+
+
+
+3. 禁止事項
+
+ユーザーは、本サービスの利用にあたり、以下の行為を行ってはなりません。
+
+1. Discordの利用規約やガイドラインに違反する行為
+
+
+2. 他のユーザーの個人情報を無断で収集・使用する行為
+
+
+3. 他のユーザーになりすます行為
+
+
+4. 他のユーザーに対する迷惑行為、不快な発言・行動
+
+
+5. 本サービスへの不正アクセスまたはハッキング行為
+
+
+6. 本サービスの正常な運営を妨害する行為（DDoS攻撃、スパム行為など）
+
+
+7. 本サービスの脆弱性やバグを悪用する行為
+
+
+8. 本サービスの機能を無断でコピー、改変、再配布する行為
+
+
+9. 商業目的で本サービスを利用する行為（許可なく販売、広告等を行うことを含む）
+
+
+10. 法律や公序良俗に反する行為
+
+
+11. 犯罪行為を助長する行為
+
+
+12. 反社会的勢力との関与・利益供与
+
+
+
+本チームは、上記の禁止事項に違反したユーザーに対して、警告なしに本サービスの利用を停止する権利を有します。
+
+4. サービスの提供停止・変更
+
+本チームは、以下の理由により、事前の通知なく本サービスの一部または全部を停止・変更できるものとします。
+
+1. システムメンテナンスまたはアップデートを実施する場合
+
+
+2. 災害や停電などの不可抗力によるシステム障害が発生した場合
+
+
+3. Discordの仕様変更やAPI制限により、本サービスの提供が困難になった場合
+
+
+4. その他、本チームがサービスの継続が難しいと判断した場合
+
+
+
+本サービスの提供停止・変更によってユーザーに生じた損害について、本チームは一切の責任を負いません。
+
+5. 免責事項
+
+本チームは、本サービスの正確性・安全性・継続性について一切の保証を行いません。
+
+本サービスの利用により発生した損害について、本チームは責任を負いません。
+
+本サービスを利用したことによるサーバーの問題やトラブルについて、本チームは関与しません。
+
+
+6. 規約の変更
+
+本チームは、必要に応じて本規約を変更することができます。
+
+規約を変更する場合、本チームは適切な方法でユーザーに通知します。
+
+ユーザーが本規約の変更後も本サービスを継続して利用する場合、変更後の規約に同意したものとみなします。
+
+
+7. お問い合わせ
+
+本規約に関するお問い合わせは、NeonBot運営チームまでご連絡ください。
+        </p>
     </main>
 
     <footer>
