--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>NeonBot</h1>
-        <p>多機能な日本製Discord Bot！</p>
+        <li><p>多機能な日本製Discord Bot！</p></li>
     </header>
 
     <main>
@@ -20,17 +20,17 @@
 
         <section>
             <h2>導入する</h2>
-            <a href="https://discord.com/oauth2/authorize?client_id=1339945413918330992&permissions=1050854&integration_type=0&scope=bot" class="button">NeonBotを導入</a>
+            <li><a href="https://discord.com/oauth2/authorize?client_id=1339945413918330992&permissions=1050854&integration_type=0&scope=bot" class="button">NeonBotを導入</a></li>
         </section>
 
         <section>
             <h2>サポートサーバー</h2>
-            <a href="YOUR_SUPPORT_SERVER_LINK" class="button">サポートサーバーに参加</a>
+            <li><a href="YOUR_SUPPORT_SERVER_LINK" class="button">サポートサーバーに参加</a></li>
         </section>
 
         <section>
             <h2>利用規約・プライバシーポリシー</h2>
-            <a href="terms.html">利用規約</a> | <a href="privacy.html">プライバシーポリシー</a>
+            <li><a href="terms.html">利用規約</a> | <a href="privacy.html">プライバシーポリシー</a></li>
         </section>
     </main>
 
